gcc/testsuite/rust/rustc/ui/recursion_limit/invalid_macro_dg.rs
#![recursion_limit = foo!()] // { dg-error "" "" { target *-*-* } }

macro_rules! foo {
    () => {"128"};
}

fn main() {}

